# intro_deep_learning

./: .dockerignore  .gitignore  CLAUDE.md  Deep_learning_with_Tensorflow.ipynb  Dockerfile  Makefile  README.md  entrypoint.sh  guion_clip_zero_shot.md  pyproject.toml  requirements-keras.txt  requirements-torch.txt  requirements.txt
class/CNN/: CLIP_Zero_Shot_Classification.ipynb  Classical Architectures CNN.ipynb  Classical_Architectures_CNN.ipynb  Depth_Estimation.ipynb  Image_Segmentation_with_HuggingFace.ipynb  Introduction_to_CNN.ipynb  Introduction_to_CV_with_OpenCV.ipynb  Introduction_to_CV_with_Pillow.ipynb  Neural Style Transfer.ipynb  Neural_Style_Transfer.ipynb  OCR_with_EasyOCR_and_TrOCR.ipynb  OCR_with_OpenCV_and_Tesseract.ipynb  Object_Detection.ipynb  Object_Detection_YOLOV8_ultralytics.ipynb  Object_Detection_YOLO_ultralytics.ipynb  Object_Tracking_Counting.ipynb  Open_Vocabulary_Detection.ipynb  Siamese_net.ipynb  Visualizing_What_CNNs_Learn.ipynb  YOLO_webcam.ipynb  cat_vs_dogs.ipynb  simple_audio.ipynb
class/Fundamentals/: First_Model.ipynb  IMBD-sentiment-binary classification.ipynb  IMBD_sentiment_binary_classification.ipynb  NN Fundamentals.ipynb  NN_Fundamentals.ipynb  Prevent Overfitting.ipynb  Prevent_Overfitting.ipynb  Regression_tuner.ipynb
class/Makefiles/: Makefile
class/NLP/: Embedding_layer.ipynb  (+4 more)
data/: gemini_BTCUSD_1hr.csv  gemini_ETHUSD_1hr.csv  gemini_LTCUSD_1hr.csv  gemini_ZECUSD_1hr.csv  winequality-red.csv
docs/: Makefiles.md  VirtualEnvironments.md
hackathon/: README.md
requirements/: requirements-keras.txt
(+71 files in other folders)
