[project]
name = "intro-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
pytorch = [
    "torch>=2.6.0",
]
dev = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]

[tool.uv.workspace]
members = [
    "docs/Containers/01_simple_uv_example",
]
